--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
 
         <!-- 自定义内容弹窗 -->
         <div style="display: none">
-            <div class="shape"><img style="width: 200px; background-color: aqua;" src="https://github.com/uiuing/NewYearFireworks/blob/main/effectDemonstration.gif" alt="恭喜发财"></div>
-            <div class="shape"><img style="width: 200px; background-color: aqua;" src="https://github.com/uiuing/NewYearFireworks/blob/main/effectDemonstration.gif" alt="恭喜发财"></div>
-            <div class="shape"><img style="width: 200px; background-color: aqua;" src="https://github.com/uiuing/NewYearFireworks/blob/main/effectDemonstration.gif" alt="恭喜发财"></div>
-            <div class="shape"><img style="width: 200px; background-color: aqua;" src="https://github.com/uiuing/NewYearFireworks/blob/main/effectDemonstration.gif" alt="恭喜发财"></div>
+
+            <div class="shape"><img style="width: 200px; background-color: aqua;" src="https://github.com/Xiaoqiqi123456/forXian/blob/main/static/image/one.png" alt="恭喜发财"></div>
+            <div class="shape"><img style="width: 200px; background-color: aqua;" src="https://github.com/Xiaoqiqi123456/forXian/blob/main/static/image/one.png" alt="恭喜发财"></div>
+            <div class="shape"><img style="width: 200px; background-color: aqua;" src="https://github.com/Xiaoqiqi123456/forXian/blob/main/static/image/one.png" alt="恭喜发财"></div>
+            <div class="shape"><img style="width: 200px; background-color: aqua;" src="https://github.com/Xiaoqiqi123456/forXian/blob/main/static/image/one.png" alt="恭喜发财"></div>
             <!-- <div class="shape">🏮恭喜发财🏮</div>
             <div class="shape">🏮万事如意🏮</div>
             <div class="shape">🏮吉庆有余🏮</div>
