--- a/index.html
+++ b/index.html
@@ -32,18 +32,12 @@
 
         <!-- 自定义内容弹窗 -->
         <div style="display: none">
-
-            <div class="shape"><img style="width: 200px; background-color: aqua;" src="https://github.com/Xiaoqiqi123456/forXian/blob/main/static/image/one.png" alt="恭喜发财"></div>
-            <div class="shape"><img style="width: 200px; background-color: aqua;" src="https://github.com/Xiaoqiqi123456/forXian/blob/main/static/image/one.png" alt="恭喜发财"></div>
-            <div class="shape"><img style="width: 200px; background-color: aqua;" src="https://github.com/Xiaoqiqi123456/forXian/blob/main/static/image/one.png" alt="恭喜发财"></div>
-            <div class="shape"><img style="width: 200px; background-color: aqua;" src="https://github.com/Xiaoqiqi123456/forXian/blob/main/static/image/one.png" alt="恭喜发财"></div>
-            <!-- <div class="shape">🏮恭喜发财🏮</div>
-            <div class="shape">🏮万事如意🏮</div>
-            <div class="shape">🏮吉庆有余🏮</div>
-            <div class="shape">🏮心想事成🏮</div>
-            <div class="shape">🏮喜气盈门🏮</div>
-            <div class="shape">🏮阖家欢乐🏮</div>
-            <div class="shape">🏮财源广进🏮</div> -->
+            <div class="shape" style="font-size: 80px;">爱</div>
+            <div class="shape" style="font-size: 60px;">线线</div>
+            <div class="shape"style="font-size: 40px;">爱</div>
+            <div class="shape" style="font-size: 40px;">线线</div>
+            <div class="shape">❤️</div>
+            <div class="shape">❤️</div>
         </div>
         <script src="static/js/main.js"></script>
     </body>
