--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>线线</title>
+        <title>迟迟</title>
         <link rel="icon" type="image/x-icon" href="https://pic.imgdb.cn/item/61f794ad2ab3f51d91b07a1e.png">
         <link rel="stylesheet" href="static/css/style.css">
         <link rel="stylesheet"
@@ -33,9 +33,9 @@
         <!-- 自定义内容弹窗 -->
         <div style="display: none">
             <div class="shape" style="font-size: 80px;">爱</div>
-            <div class="shape" style="font-size: 60px;">线线</div>
-            <div class="shape"style="font-size: 40px;">爱</div>
-            <div class="shape" style="font-size: 40px;">线线</div>
+            <div class="shape" style="font-size: 60px;">迟迟</div>
+            <div class="shape"style="font-size: 40px;">❤️</div>
+            <div class="shape" style="font-size: 40px;">迟迟</div>
             <div class="shape">❤️</div>
             <div class="shape">❤️</div>
         </div>
